--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -66,7 +66,8 @@
 			                        	<label class="sr-only" for="form-password">Password</label>
 			                        	<input type="password" name="form-password" placeholder="Password..." class="form-password form-control" id="form-password">
 			                        </div>
-			                        <button type="submit" class="btn" id="login" style="">Sign in</button>
+                                                
+			                        <button   onclick="location.href='https://www.linkedin.com/uas/oauth2/authorization?response_type=code&client_id=77a9ivlgasumg4&redirect_uri=http://localhost:8080/JobEasyApp/GetToken&state=ebiz2016';" class="btn" id="login" style="" >Sign in with Linkedin</button>
                                                 <div class="sepOr">
                                         <!-- <span class="or">or</span> -->
                                                     <hr>
